Adding Container declarations

--- a/frontend/src/app/user/user.component.html
+++ b/frontend/src/app/user/user.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper fadeInDown">
   <div id="formContent">
-    <img src="assets/Meanz_logo.jpeg" alt="MEANZ" width="300" height="300">
+    <img src="assets/MEANZ.jpeg" alt="MEANZ" width="300" height="300">
     <router-outlet></router-outlet>
   </div>
 </div>
